Added a loader to the project

--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,15 @@
 
 <body>
   <div id="root"></div>
+
+  <div class="loader-wrapper">
+    <div class="loader book">
+      <figure class="page"></figure>
+      <figure class="page"></figure>
+      <figure class="page"></figure>
+    </div>
+    <!-- <h1 class="loader-heading"></h1> -->
+  </div>
 </body>
 
 </html>
